gcc/ 	PR tree-optimization/21030 	* tree-vrp.c (adjust_range_with_scev): Do not create invalid 	ranges where VR->MAX is smaller than VR->MIN.

testsuite/
	PR tree-optimization/21030
	* gcc.dg/tree-ssa/pr21030.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@98999 138bc75d-0d04-0410-961f-82ee72b054a4